Return empty list of outOfRangeSpecs to get the test passing